3.3.0 (2017-XX-XX)
------------------

New features
 - [core] can now invite attendees to exceptions only (#2561)
 - [web] display freebusy information of owner in appointment editor
 - [web] register SOGo as a handler for the mailto scheme (#1223)
 - [web] new events list view where events are grouped by day
 - [web] user setting to always show mail editor inside current window or in popup window

Enhancements
 - [web] follow requested URL after user authentication
 - [web] added Simplified Chinese (zh_CN) translation - thanks to Thomas Kuiper
 - [web] now also give modify permission when selecting all calendar rights
 - [web] allow edition of IMAP flags associated to mail labels

Bug fixes
 - [core] yearly repeating events are not shown in web calendar (#4237)
 - [core] increased column size of settings/defaults for MySQL (#4260)
 - [core] fixed yearly recurrence calculator with until date
 - [core] generalized HTML sanitization to avoid encoding issues when replying/forwarding mails
 - [core] don't expose web calendars to other users (#4331)
 - [web] fixed display of error when the mail editor is in a popup
 - [web] attachments are not displayed on IOS (#4150)
 - [web] fixed parsing of pasted email addresses from Spreadsheet (#4258)
 - [web] messages list not accessible when changing mailbox in expanded mail view (#4269)
 - [web] only one postal address of same type is saved (#4091)
 - [web] improve handling of email notifications of a calendar properties
 - [web] fixed XSRF cookie path when changing password (#4139)
 - [web] spaces can now be inserted in address book names
 - [web] prevent the creation of empty contact categories
 - [web] fixed mail composition from message headers (#4335)
 - [web] restore messages selection after automatic refresh (#4330)
 - [eas] hebrew folders encoding problem using EAS (#4240)
 - [eas] avoid sync requests for shared folders every second (#4275)

3.2.10 (2017-07-05)
-------------------

New features